Update codebase
* use spotbugs annotation
* remove deprecations
* use java 17 features
* cleanup suppressions